[package]
name = "porkers"
version = "0.1.0"
edition = "2024"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/KP64/porkers"
repository = "https://github.com/KP64/porkers"
description = "Rust library to interface with the porkbun API"
keywords = ["porkbun", "library"]
categories = ["api-bindings"]


[dependencies]
anyhow = "=1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
reqwest = { version = "=0.13.1", features = ["json"] }
serde = { version = "=1.0.228", features = ["derive"] }
thiserror = "=2.0.17"
tokio = { version = "=1.48.0", features = ["full"] }
vec1 = { version = "1.12.1", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"

# The restriction clippy lints handpicked
absolute_paths = "warn"
alloc_instead_of_core = "warn"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
arbitrary_source_item_ordering = "warn"
arithmetic_side_effects = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
assertions_on_result_states = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
create_dir = "deny"
dbg_macro = "warn"
decimal_literal_representation = "warn"
default_union_representation = "deny"
deref_by_slicing = "warn"
doc_include_without_cfg = "deny"
else_if_without_else = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "deny"
expect_used = "warn"
field_scoped_visibility_modifiers = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "deny"
if_then_some_else_none = "warn"
impl_trait_in_params = "deny"
indexing_slicing = "warn"
infinite_loop = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax = "allow"
integer_division = "warn"
integer_division_remainder_used = "warn"
iter_over_hash_type = "warn"
large_include_file = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
lossy_float_literal = "deny"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "deny"
min_ident_chars = "warn"
missing_assert_message = "deny"
missing_asserts_for_indexing = "warn"
missing_docs_in_private_items = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "deny"
module_name_repetitions = "warn"
modulo_arithmetic = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_ascii_literal = "warn"
non_zero_suggestions = "deny"
panic = "warn"
panic_in_result_fn = "warn"
partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
# pattern_type_mismatch = "warn"
pointer_format = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_use = "warn"
pub_without_shorthand = "deny"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_test_prefix = "deny"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_name_method = "deny"
semicolon_outside_block = "warn"
single_char_lifetime_names = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
string_add = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
tests_outside_test_module = "deny"
try_err = "warn"
undocumented_unsafe_blocks = "deny"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"

[lints.rust]
ambiguous_negative_literals = "warn"
closure_returning_async_block = "warn"
deref_into_dyn_supertrait = "warn"
elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "warn"
if_let_rescope = "warn"
impl_trait_overcaptures = "warn"
impl_trait_redundant_captures = "warn"
let_underscore_drop = "warn"
macro_use_extern_crate = "deny"
meta_variable_misuse = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "deny"
redundant_imports = "warn"
redundant_lifetimes = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_attr_outside_unsafe = "deny"
unsafe_code = "forbid"
unstable_features = "warn"
unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
unused_results = "warn"
variant_size_differences = "warn"
